2013-01-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing bug exposed by revision 7267 (bug #3600300 "as_npc()
	  causes issues (warning fix regression)") before which the the avatar was
	  being incorrectly cast from Main_actor to unrelated class Npc_actor.

2013-01-10	Malignant Manor <malignantmanor@users.sourceforge.net>
	* all: Eliminate some Cppcheck errors and noise

2013-01-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Collecting all hard-coded usecode functions in separate header until
	  they are properly de-hard-coded. Eliminated warnings. Consolidated  32-bit
	  usecode opcodes with their 16-bit counterparts when they were otherwise
	  identical except for size of data read. Improved string reading functions.
	Rev 7271:
	* all: Made party members less prone to teleporting while trying to sit on
	  barges. This is done by having party members persistently repathfinding if
	  the path is blocked, and by ignoring NPCs that aren't sitting, lying down,
	  etc. when determining if it is possible to reach the seat. Also, some more
	  warnings eliminated. Further, actors no longer move aside when they are on
	  the move. Moreover, party members will also stand at rest after a while,
	  as the avatar does, matching the original games. Finally, the avatar will
	  have bad feelings when saving too often.

2013-01-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actor.*, schedule.cc: Renamed Actor::unready_weapon to Actor::empty_hands,
	  which will now empty both hands. The function tries to place on the belt
	  and backpack slots, trying to add to containers if present, or forcing the
	  slot to accept the item if not. This fixes weapons disappearing on sleep
	  bug. Also, party members will not hide their weapons on sleep.
	* paths.*: Yet more fixes to grabbing.

2013-01-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.*, usecode/intrinsics.cc: Fixed bug #3599714 "Attacked npcs make