@@ -1,4 +1,4 @@
-INCLUDES = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../imagewin -I$(srcdir)/../shapes \
+AM_CPPFLAGS = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../imagewin -I$(srcdir)/../shapes \
 		-I$(srcdir)/../objs -I$(srcdir)/../files -I$(srcdir)/../gumps \
 		-I$(srcdir)/../conf -I$(srcdir)/midi_drivers -I../files -I../conf \
 		$(SDL_CFLAGS) $(VORBIS_CFLAGS) $(OGG_CFLAGS) $(KMID_INCLUDES) \
