@@ -1,4 +1,4 @@
-INCLUDES = -I$(srcdir)/../../../headers -I$(srcdir)/../../../conf -I$(srcdir)/../.. -I$(srcdir)/.. -I$(srcdir)/../../../files -I$(srcdir)/../../../imagewin -I$(srcdir)/../../../shapes $(SDL_CFLAGS) $(KMID_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS) -I../../../conf -I../../../files
+AM_CPPFLAGS = -I$(srcdir)/../../../headers -I$(srcdir)/../../../conf -I$(srcdir)/../.. -I$(srcdir)/.. -I$(srcdir)/../../../files -I$(srcdir)/../../../imagewin -I$(srcdir)/../../../shapes $(SDL_CFLAGS) $(KMID_INCLUDES) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS) -I../../../conf -I../../../files
 
 noinst_LTLIBRARIES = libtimidity.la
 
