@@ -1,4 +1,4 @@
-INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../headers -I$(srcdir)/../files	\
+AM_CPPFLAGS = -I$(srcdir)/.. -I$(srcdir)/../headers -I$(srcdir)/../files	\
 		-I$(srcdir)/../shapes -I$(srcdir)/../audio -I$(srcdir)/../conf	\
 		-I$(srcdir)/../objs -I$(srcdir)/../imagewin -I$(srcdir)/../gumps	\
 		$(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) $(DEBUG_FLAGS) $(CPPFLAGS) \
