@@ -1,4 +1,4 @@
-INCLUDES = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../files \
+AM_CPPFLAGS = -I$(srcdir)/../headers -I$(srcdir)/.. -I$(srcdir)/../files \
 	-I$(srcdir)/../imagewin -I$(srcdir)/../audio -I$(srcdir)/../shapes/shapeinf \
 	-I$(srcdir)/../data -I$(srcdir)/../usecode -I$(srcdir)/../objs \
 	$(SDL_CFLAGS) $(FREETYPE2_INCLUDES) \
